# phx_new_desktop

./: .gitignore  .tool-versions  Makefile  README.md  mix.exs
.github/workflows/: main.yml
assets/css/: app.css
assets/js/: app.js  generate.js
config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
lib/: phx_new_desktop.ex  phx_new_desktop_web.ex
lib/phx_new_desktop/: application.ex  topic_stream.ex
lib/phx_new_desktop_web/: endpoint.ex  router.ex  telemetry.ex
lib/phx_new_desktop_web/components/: core_components.ex  layouts.ex
lib/phx_new_desktop_web/components/layouts/: root.html.heex
lib/phx_new_desktop_web/controllers/: error_html.ex  error_json.ex  gen_live.ex  gen_live.html.heex
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: server-aarch64-apple-darwin  server-x86_64-unknown-linux-gnu
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
test/phx_new_desktop_web/controllers/: error_html_test.exs  error_json_test.exs  page_controller_test.exs
test/support/: conn_case.ex
