[package]
name = "phx_new_desktop"
version = "0.1.2"
description = "phx.new app"
authors = ["feng19"]
license = "Apache-2.0"
repository = "https://github.com/feng19/phx_new_desktop"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies.tauri-build]
git = "https://github.com/tauri-apps/tauri"
branch = "dev"
package = "tauri-build"
features = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.tauri]
git = "https://github.com/tauri-apps/tauri"
branch = "dev"
features = ["api-all"]

[dependencies.fix-path-env]
git = "https://github.com/tauri-apps/fix-path-env-rs"
branch = "dev"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
